--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,3 +5,4 @@ spring.datasource.password=M@7013314272h
 ## Hibernate properties
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.open-in-view=true
+server.port=8081
