Add EXchange Mapping

--- a/pom.xml
+++ b/pom.xml
@@ -38,7 +38,7 @@
 		<dependency>
 			<groupId>org.mapstruct</groupId>
 			<artifactId>mapstruct-processor</artifactId>
-			<version>1.5.0.Final</version> <!-- Check for the latest version on Maven Central -->
+			<version>1.5.5.Final</version> <!-- Check for the latest version on Maven Central -->
 		</dependency>
 		<dependency>
 			<groupId>org.mapstruct</groupId>
@@ -49,6 +49,11 @@
 			<groupId>com.mysql</groupId>
 			<artifactId>mysql-connector-j</artifactId>
 			<scope>runtime</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-lang3</artifactId>
+			<version>3.14.0</version>
 		</dependency>
 		<dependency>
 			<groupId>org.projectlombok</groupId>
