--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,4 +5,5 @@ spring.datasource.password=M@7013314272h
 ## Hibernate properties
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.open-in-view=true
+spring.jpa.show-sql=true
 server.port=8081
