--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=walletservice
-spring.datasource.url=jdbc:mysql://localhost:3306/wallet?serverTimezone=UTC&allowPublicKeyRetrieval=true&useSSL=false
-spring.datasource.username=root
-spring.datasource.password=M@7013314272h
+spring.datasource.url=jdbc:mysql://mysql-2f74c879-rpranay665-4d83.h.aivencloud.com:10807/wallet
+spring.datasource.username=avnadmin
+spring.datasource.password=AVNS_zPqe9218M47CS18fv9Q
 ## Hibernate properties
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.open-in-view=true
