--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,5 +5,5 @@ spring.datasource.password=AVNS_zPqe9218M47CS18fv9Q
 ## Hibernate properties
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.open-in-view=true
-spring.jpa.show-sql=true
 server.port=8081
+cryptotrade.trade.api.baseUrl=localhost:8080
