--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,17 @@
 spring.application.name=walletservice
-spring.datasource.url=jdbc:mysql://mysql-2f74c879-rpranay665-4d83.h.aivencloud.com:10807/wallet
+spring.datasource.url=jdbc:mysql://mysql-37ffb6d1-tarakeshpolakolu-5c45.f.aivencloud.com:21326/wallet
 spring.datasource.username=avnadmin
-spring.datasource.password=AVNS_zPqe9218M47CS18fv9Q
+spring.datasource.password=AVNS_OptlWonSgMkovzVxeae
 ## Hibernate properties
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.open-in-view=true
 server.port=8081
+spring.jpa.show-sql=true
 cryptotrade.trade.api.baseUrl=localhost:8080
+decisionserv.api.baseUrl=localhost:8082
+
+
+spring.kafka.bootstrap-servers=localhost:9092
+spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.StringSerializer
+spring.kafka.producer.value-serializer=org.springframework.kafka.support.serializer.JsonSerializer
+
