--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,9 +9,4 @@ server.port=8081
 spring.jpa.show-sql=true
 cryptotrade.trade.api.baseUrl=localhost:8080
 decisionserv.api.baseUrl=localhost:8082
-
-
-spring.kafka.bootstrap-servers=localhost:9092
-spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.StringSerializer
-spring.kafka.producer.value-serializer=org.springframework.kafka.support.serializer.JsonSerializer
-
+orderservice.api.baseUrl=localhost:8083
