--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,6 +7,5 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.open-in-view=true
 server.port=8081
 spring.jpa.show-sql=true
-cryptotrade.trade.api.baseUrl=localhost:8080
-decisionserv.api.baseUrl=localhost:8082
+crypto.trade.api.baseUrl=localhost:8080
 orderservice.api.baseUrl=localhost:8083
